--- a/public/css/main.css
+++ b/public/css/main.css
@@ -350,13 +350,23 @@ body {
 
 .advantages__wrapper {
     display: flex;
-    justify-content: center;
     align-items: center;
     flex-direction: column;
     margin-top: 30px;
+    width: 100%;
+}
+
+.advantages__wrapper-content {
+    width: fit-content;
+}
+
+.advantage__title {
+    display: flex;
+    justify-content: flex-end;
 }
 
 .advantages-title {
+    width: fit-content;
     font-size: 26px;
     font-weight: 500;
     color: #000;
@@ -369,6 +379,11 @@ body {
     gap: 50px;
 }
 
+.advantage-img img {
+    width: 223px;
+    height: 362px;
+}
+
 .advantage-text {
     font-size: 16px;
     font-weight: 500;
@@ -376,18 +391,23 @@ body {
     text-wrap: wrap;
 }
 
-.exp-title {
-    font-size: 26px;
-    font-weight: 500;
-    color: #000;
-    text-decoration: underline;
-}
-
 .exp__wrapper {
     margin-top: 30px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
+}
+
+.exp__wrapper-content {
+    width: fit-content;
+}
+
+.exp-title {
+    font-size: 26px;
+    font-weight: 500;
+    color: #000;
+    text-decoration: underline;
 }
 
 .exp__images {
@@ -402,8 +422,13 @@ body {
 }
 
 .exp-img img {
-    max-width: 350px;
-    max-height: 255px;
+    width: 347px;
+    height: 478px;
+}
+
+.exp-img.first img {
+    width: 500px;
+    height: 478px;
 }
 
 .exp-desc {
